                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Stenberg (26 Jan 2009)
- Craig A West brought CURLOPT_NOPROXY and the corresponding --noproxy option.
  They basically offer the same thing the NO_PROXY environment variable only
  offered previously: list a set of host names that shall not use the proxy
  even if one is specified.

Daniel Fandrich (20 Jan 2009)
- Call setlocale() for libtest tests to test the effects of locale-induced
  libc changes on libcurl.

- Fixed a couple more locale-dependent toupper conversions, mainly for
  clarity.  This does fix one problem that causes ;type=i FTP URLs
  to fail in the Turkish locale when CURLOPT_PROXY_TRANSFER_MODE is
  used (test case 561)

- Added tests 561 and 1091 through 1094 to test various combinations
  of ;type= and ;mode= URLs that could potentially fail in the Turkish
  locale.

Daniel Stenberg (20 Jan 2009)
- Lisa Xu pointed out that the ssh.obj file was missing from the
  lib/Makefile.vc6 file (and thus from the vc8 and vc9 ones too).

Version 7.19.3 (19 January 2009)

Daniel Stenberg (16 Jan 2009)
- Andrew de los Reyes fixed curlbuild.h for "generic" gcc builds on PPC, both
  32 bit and 64 bit.

Daniel Stenberg (15 Jan 2009)
- Tim Ansell fixed a compiler warning in lib/cookie.c

Daniel Stenberg (14 Jan 2009)
- Grant Erickson fixed timeouts for TFTP such that specifying a
  connect-timeout, a max-time or both options work correctly and as expected
  by passing the correct boolean value to Curl_timeleft via the
  'duringconnect' parameter.

  With this small change, curl TFTP now behaves as expected (and likely as
  originally-designed):

  1) For non-existent or unreachable dotted IP addresses:
